# Operation-Ruinam-Dei

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg-configuration.json
include/Animation/: animation.h
include/App/: app.h  input.h
include/Core/: input.h  time_manager.h  time_system.h  vec2.h
include/Game/: player.h
include/Renderer/: temp_renderer.h
include/Utilities/: animation.h  initialize_SDL.h  particles.h  random.h  timer.h  vec2.h
include/Utilities/Particles/: particle_emitterpresets.h  particle_movement.h  particles.h
src/: main.C
src/Animation/: animation.c
src/App/: app.C  app_data.C  app_event_handler.C  app_postupdate.C  app_preupdate.C  app_quit.C  app_start.C  input.C
src/Core/: input.C  time_manager.c  time_system.c  vec2.c
src/Game/Player/: player.c  player_actions.c  player_data.c  player_input_handler.c  player_postupdate.c  player_render.c  player_start.c
src/Game/Player/Base/: player_animations.c  player_data.c  player_input_handler.c  player_postupdate.c  player_preupdate.c  player_render.c  player_start.c
src/Game/Player/Gameplay/: player_combat.c  player_movement.c  player_skills.c
src/Renderer/: temp_renderer.C
src/Utilities/: animation.c  initialize_SDL.C  particles.c  random.c  timer.c
src/Utilities/Particles/: particle_emitterpresets.c  particle_movement.c  particles.c
